--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -79,7 +79,9 @@
                                 </span>
                             </td>
                             <td th:text="${habit.id}"></td>
-                            <td th:text="${habit.image}"></td>
+                            <td>
+                                <img th:src="${habit.image}" th:width="120" th:height="100">
+                            </td>
                             <td>
                                 <table class="table table-borderless m-0">
                                     <thead>
