[Sign in] Wrong user name is displayed in restore password email #1530

--- a/email/src/main/resources/templates/email/restore-email-page.html
+++ b/email/src/main/resources/templates/email/restore-email-page.html
@@ -174,7 +174,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                        <div style="margin: 0;" th:text="${'Hi ' + userFirstName + ', Thanks for your interest in joining Green City!'}"></div>
+                        <div style="margin: 0;" th:text="${'Hi ' + name + ', Thanks for your interest in joining Green City!'}"></div>
                     </td>
                 </tr>
                 <!-- end copy -->
