save, deleteById, deleteAllByIds: UI part

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -10,6 +10,9 @@
                 <div class="left-side">
                     <ul class="list-of-site-links">
                         <li>
+                            <a href="/management/advices">Advices</a>
+                        </li>
+                        <li>
                             <a class="router-links" href="/management/eco-news">Eco news</a>
                         </li>
                         <li>
