--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -13,6 +13,11 @@
                     <div class="navigation-menu-left">
                         <ul>
                             <li>
+                                <a href="/management/advices">
+                                    Advices
+                                </a>
+                            </li>
+                            <li>
                                 <a href="/management/eco-news">
                                     Eco news
                                 </a>
