--- a/core/src/main/resources/templates/core/management_advices.html
+++ b/core/src/main/resources/templates/core/management_advices.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
-    <script th:src="@{/management/advices/buttonsAJAX.js}"></script>
+    <script th:src="@{/management/advice/buttonsAJAX.js}"></script>
 </head>
 <body>
 <div id="header" th:insert="core/header"></div>
@@ -93,8 +93,8 @@
                                 </table>
                             </td>
                             <td>
-                                <a th:href="@{/advice/find/(id=${advice.getId()})}" class="edit eBtn" ><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                <a th:href="@{/management/advice/(id=${advice.getId()})}" class="delete eDelBtn" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                <a th:href="@{/advices/find/(id=${advice.getId()})}" class="edit eBtn" ><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                <a th:href="@{/management/advices/{id}(id=${advice.getId()})}" class="delete eDelBtn" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                             </td>
                         </tr>
                         </tbody>
@@ -103,9 +103,9 @@
                 <div class="clearfix">
                     <div class="hint-text">Showing <b th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> out of <b th:text="${pageable.getTotalElements()}">25</b> entries</div>
                     <ul class="pagination" >
-                        <li class="page-item" th:classappend="${pageable.getCurrentPage()==0?'disabled':''}"><a th:href="@{advice(page=${pageable.getCurrentPage()-1})}" class="page-link">Previous</a></li>
-                        <li class="page-item" th:each="i : ${#numbers.sequence(0,pageable.getTotalPages()-1)}" th:classappend="${pageable.getCurrentPage()==i?'active':''}"><a th:href="@{advice(page=${i})}" class="page-link" th:text="${i+1}">1</a></li>
-                        <li class="page-item" th:classappend="${pageable.getCurrentPage()==pageable.getTotalPages()-1?'disabled':''}"><a th:href="@{advice(page=${pageable.getCurrentPage()+1})}" class="page-link">Next</a></li>
+                        <li class="page-item" th:classappend="${pageable.getCurrentPage()==0?'disabled':''}"><a th:href="@{advices(page=${pageable.getCurrentPage()-1})}" class="page-link">Previous</a></li>
+                        <li class="page-item" th:each="i : ${#numbers.sequence(0,pageable.getTotalPages()-1)}" th:classappend="${pageable.getCurrentPage()==i?'active':''}"><a th:href="@{advices(page=${i})}" class="page-link" th:text="${i+1}">1</a></li>
+                        <li class="page-item" th:classappend="${pageable.getCurrentPage()==pageable.getTotalPages()-1?'disabled':''}"><a th:href="@{advices(page=${pageable.getCurrentPage()+1})}" class="page-link">Next</a></li>
                     </ul>
                 </div>
             </div>
@@ -115,7 +115,7 @@
     <div id="addAdviceModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form th:action="" method="get" id="addAdviceForm">
+                <form th:action="@{/advices}" method="post" id="addAdviceForm">
                     <div class="modal-header">
                         <h4 class="modal-title">Add Advice</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -205,12 +205,12 @@
         </div>
     </div>
     <!-- Delete Modal HTML -->
-    <div id="deleteFactOfTheDayModal" class="modal fade">
+    <div id="deleteAdviceModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form id="deleteFactOfThedayForm" >
+                <form id="deleteAdviceForm" >
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete Fact of the day</h4>
+                        <h4 class="modal-title">Delete Advice</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
