update: UI and server part

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -10,7 +10,7 @@
                 <div class="left-side">
                     <ul class="list-of-site-links">
                         <li>
-                            <a href="/management/advices">Advices</a>
+                            <a href="/management/advices" class="router-links">Advices</a>
                         </li>
                         <li>
                             <a class="router-links" href="/management/eco-news">Eco news</a>
