searchBy: UI and server part

--- a/core/src/main/resources/templates/core/management_advices.html
+++ b/core/src/main/resources/templates/core/management_advices.html
@@ -36,7 +36,7 @@
                         </div>
                         <div class="col-sm-6">
                                 <span class="search-box-right">
-                                    <form class="form-inline searching" action="/management/factoftheday/findAll" method="get">
+                                    <form class="form-inline searching" action="/management/advices" method="get">
                                         <i class="material-icons"></i>
                                         <input type="text" name="query" class="form-control" placeholder="Search…">
                                     </form>
