--- a/core/src/main/resources/templates/core/management_advices.html
+++ b/core/src/main/resources/templates/core/management_advices.html
@@ -174,7 +174,7 @@
                         </div>
                         <div class="form-group">
                             <label>Habit ID</label>
-                            <input type="text" class="form-control" id="habit" name="habit" required>
+                            <input type="number" class="form-control" id="habit" name="habit" required>
                             <span th:id="errorModalUpdatehabit.id" class="errorSpan"></span>
                         </div>
                         <th:block th:each="language, iterInfo : ${languages}">
